fix: nav alignment of contact info

--- a/turbo/src/app/nav/nav.component.scss
+++ b/turbo/src/app/nav/nav.component.scss
@@ -296,7 +296,7 @@ header {
             
 
             @media only screen and (min-device-width: 812px) {
-                padding: 0 55px;
+                padding: 0 25px;
             }
 
             .navbar-items {
